--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   padding: 0;
   margin: 0;
   border: 0;
+
+  font-family: "Libertinus Serif Display", serif;
 }
 
 .maket-form {
@@ -67,6 +69,9 @@ h1:hover {
   margin-top: 26px;
   height: 100px;
   background-color: rgb(236, 236, 236);
+
+  margin: 43px;
+  border-radius: 40px;
 }
 
 .sidebar:hover {
@@ -106,6 +111,10 @@ h1:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
 
+.sidebar h2 {
+  margin-top: 100px;
+}
+
 .sidebar-buttonField {
   display: flex;
   flex-direction: row;
@@ -123,15 +132,19 @@ h1:hover {
   background-color: rgb(212, 56, 25);
 }
 
-.info-box {
+.container {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 
-  height: 100px;
-  width: 450px;
-  margin-top: 46px;
-  margin-right: 100px;
+  gap: 60px;
+}
 
-  background-color: rgba(233, 233, 233, 0.667);
+.info-box {
+  height: 700px;
+  width: 550px;
+
+  background-color: rgba(233, 233, 233, 0.78);
 
   border-radius: 25px;
 
@@ -141,7 +154,51 @@ h1:hover {
 }
 
 .info-box:hover {
-  height: 500px;
-
+  height: 700px;
   transition-duration: 600ms;
+}
+
+/* text in windows*/
+.text-holder {
+  margin: 26px;
+}
+.text-holder h2 {
+  font-size: 35px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.text-holder p {
+  padding-left: 5px;
+  font-size: 25px;
+  letter-spacing: 1px;
+  margin: 0;
+}
+
+.block-of-4 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 60px;
+  width: 96vw;
+  height: 100vh;
+  margin: 43px;
+}
+
+.ground {
+  background-color: gray;
+  border-radius: 9%;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.ground-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 40px;
 }
